10-Private-Registry/hello-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  namespace: dev
spec:
  defaultBackend:
    service:
      name: hello-service
      port:
        number: 80

  ingressClassName: nginx
  tls:
    - hosts:
        - k8s.kuruhurma.com
      secretName: k8s-kuruhurma-com-tls
  rules:
    - host: "k8s.kuruhurma.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hello-service
                port:
                  number: 80
